--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Devices management</title>
+	<title>Mosaic services</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -11,8 +11,10 @@
 	<script src="js/popper.min.js"></script>
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<script src="js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
-	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/datatables.min.css"/>
+	<!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css"> -->
+	<script type="text/javascript" src="js/datatables.min.js"></script>
+	<!-- <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script> -->
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js" defer></script>
 	<link rel="icon" type="image/svg" href="img/dev-support.svg">
@@ -57,43 +59,67 @@
 	<div class="main-container container-xl mx-5 d-none">
 			<div class="collapse border border-dark mt-2 p-2">
 				<div class="row">
-					<div class="col">Device</div>
-					<div class="col">Platform</div>
-					<div class="col">Service</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<input type="text" class="input-device input-device-name" placeholder="Device">
+					<div class="col-4">
+						<div class="row">
+							<div class="col">Node name</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input type="text" class="input-device input-device-name" placeholder="Node name">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">Platform</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input type="text" class="input-device input-device-platform" placeholder="Platform">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">Service</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input type="text" class="input-device input-device-service" placeholder="Service">
+							</div>
+						</div>
 					</div>
-					<div class="col">
-						<input type="text" class="input-device input-device-platform" placeholder="Platform">
+					<div class="col-4">
+						<div class="row">
+							<div class="col">Ops. Owner</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input type="text" class="input-device input-device-owner" placeholder="Ops. Owner">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">Manager</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input type="text" class="input-device input-device-manager" placeholder="Manager">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">Contact Info</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<input type="text" class="input-device input-device-contact_info" placeholder="Contact Info">
+							</div>
+						</div>
 					</div>
-					<div class="col">
-						<input type="text" class="input-device input-device-service" placeholder="Service">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">Ops. Owner</div>
-					<div class="col">Contact Info</div>
-					<div class="col">Manager</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<input type="text" class="input-device input-device-owner" placeholder="Ops. Owner">
-					</div>
-					<div class="col">
-						<input type="text" class="input-device input-device-contact_info" placeholder="Contact Info">
-					</div>
-					<div class="col">
-						<input type="text" class="input-device input-device-manager" placeholder="Manager">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">Comments</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<textarea name="" id="" rows="2" cols="60" class="input-device input-device-comments"></textarea>
+					<div class="col-4">
+						<div class="row">
+							<div class="col">Comments</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<div class="input-device input-device-comments text-area border mr-5 rounded crop-height" contenteditable="true"></div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row mt-2">
@@ -111,7 +137,7 @@
 		<table class="devices-all-table table table-hover table-sm table-striped table-bordered compact no-footer" id="devices-all-table">
 			<thead>
 				<tr>
-					<th>Device</th>
+					<th>Node</th>
 					<th class="wider-tr">Platform</th>
 					<th class="wider-tr">Service</th>
 					<th class="wider-tr">Ops. owner</th>
@@ -126,26 +152,6 @@
 		</table>
 	</div>
 
-	<!-- <div id="changeDeviceOptions" class="modal" tabindex="-1" role="dialog">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="titleAccessControl">Device add/update</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-success" data-dismiss="modal">Apply</button>
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Add</button>
-					<button type="button" class="btn btn-warning" data-dismiss="modal">Clear</button>
-				</div>
-			</div>
-		</div>
-	</div> -->
 	<div id="dialogModal" class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
