--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<script src="js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/datatables.min.css"/>
-	<!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css"> -->
 	<script type="text/javascript" src="js/datatables.min.js"></script>
-	<!-- <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script> -->
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js" defer></script>
 	<link rel="icon" type="image/svg" href="img/dev-support.svg">
 </head>
 <body>
 	<div class="sticky-top float-right">
-		<a class="btn-logout" href="#">
+		<a class="btn-logout d-block" href="#">
         	<img src="img/exit.svg" alt="logout" title="logout" />
+      	</a>
+		<a class="btn-export d-block" href="#">
+        	<img src="img/table.svg" alt="Export" title="Export" />
       	</a>
 	</div>
 	<div class="modal fade" id="modal_signIn" tabindex="-1" role="dialog" aria-labelledby="modalSignIn" aria-hidden="true">
@@ -56,7 +57,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="main-container container-xl mx-5 d-none">
+	<div class="main-container container-xl mx-lg-4 mx-md-2 mx-sm-1 d-none">
 			<div class="collapse border border-dark mt-2 p-2">
 				<div class="row">
 					<div class="col-4">
