Export to native xls-files. Some bug fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="main-container container-xl mx-lg-4 mx-md-2 mx-sm-1 d-none">
 			<div class="collapse border border-dark mt-2 p-2">
 				<div class="row">
-					<div class="col-4">
+					<div class="col-4 col-xl-3">
 						<div class="row">
 							<div class="col">Node name</div>
 						</div>
@@ -86,7 +86,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-4">
+					<div class="col-4 col-xl-3">
 						<div class="row">
 							<div class="col">Ops. Owner</div>
 						</div>
@@ -112,13 +112,13 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-4">
+					<div class="col-4 col-xl-6">
 						<div class="row">
 							<div class="col">Comments</div>
 						</div>
 						<div class="row">
 							<div class="col">
-								<div class="input-device input-device-comments text-area border mr-5 rounded crop-height" contenteditable="true"></div>
+								<div class="input-device input-device-comments text-area border mr-1 mr-xl-2 rounded" contenteditable="true"></div>
 							</div>
 						</div>
 					</div>
