--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 	<div class="main-container container-xl mx-lg-4 mx-md-2 mx-sm-1 d-none">
-			<div class="collapse border border-dark mt-2 p-2">
+			<div class="collapse border border-dark mt-2 p-2 modify-container d-none">
 				<div class="row">
 					<div class="col-4 col-xl-3">
 						<div class="row">
@@ -131,7 +131,7 @@
 					</div>
 				</div>
 			</div>
-		<div class="divider-arrow">
+		<div class="divider-arrow d-none">
 			<hr class="dotted">
 			<div class="triangle triangle-down"></div>
 		</div>
